force-app/main/default/objects/Penny_Weekly_Report__c/Penny_Weekly_Report__c.object-meta.xml
<CustomObject>
    <label>Penny Weekly Report</label>
    <nameField>
        <displayFormat>PWR-{0000}</displayFormat>
        <label>Penny Weekly Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penny Weekly Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>