force-app/main/default/objects/Penny_Weekly_Report__c/fields/Suggested_Actions__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Actions__c</fullName>
    <label>Suggested Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>