force-app/main/default/objects/Penny_Weekly_Report__c/fields/Support_Flags__c.field-meta.xml
<CustomField>
    <fullName>Support_Flags__c</fullName>
    <label>Support Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>