force-app/main/default/objects/Penny_Weekly_Report__c/fields/Top_Themes__c.field-meta.xml
<CustomField>
    <fullName>Top_Themes__c</fullName>
    <label>Top Themes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>