force-app/main/default/objects/Penny_Weekly_Report__c/fields/Trail_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Trail_Breakdown__c</fullName>
    <label>Trail Breakdown</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>