force-app/main/default/objects/Penny_Weekly_Report__c/fields/Week_End__c.field-meta.xml
<CustomField>
    <fullName>Week_End__c</fullName>
    <label>Week End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>